--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-index.html
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="UTF-8">
+  <title>Memory Game</title>
+  <link rel="stylesheet" href="style.css"></link>
+  <script src="app.js" charset="utf-8"></script>
+</head>
+<body>
+
+<h3 class="score">YOUR SCORE: <span id="result"></span></h3>
+
+<div class="container">
+  <div class="grid">
+  </div>
+</div>
+
+</body>
+</html>
